--- a/trafiksby.html
+++ b/trafiksby.html
@@ -482,23 +482,27 @@
 						<canvas id="donutLocation"></canvas>
 					</div>
 				</div>
-				<div class="col-12 col-md-4">
-					<h5 class="text-center">Jenis Pelayaran</h5>
-					<div class="chart-box">
-						<canvas id="donutShippingType"></canvas>
-					</div>
-				</div>
-				<!-- Baru: Bar chart Package Type -->
+
+				<!-- Tetap: Bar chart Package Type -->
 				<div class="col-12 col-md-4">
 					<h5 class="text-center">Jenis Kemasan</h5>
 					<div class="chart-box">
 						<canvas id="barPackageType"></canvas>
 					</div>
 				</div>
+
+				<!-- Pindahkan: Bar chart Jenis Kapal ke baris ini -->
+				<div class="col-12 col-md-4">
+					<h5 class="text-center">Jenis Kapal</h5>
+					<div class="chart-box">
+						<canvas id="barVesselType"></canvas>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<!-- Row baru: Bar chart Tipe Kapal (vessel_type) -->
+		<!-- HAPUS: Row terpisah Jenis Kapal (tidak diperlukan lagi) -->
+		<!--
 		<div class="container my-3">
 			<div class="row bar-row g-3 align-items-stretch">
 				<div class="col-12">
@@ -509,13 +513,11 @@
 				</div>
 			</div>
 		</div>
+		-->
 
 		<div id="status" class="mt-3 text-muted small"></div>
 
 		<!-- Pivot: kolom dari 'location', baris: Surabaya & Gresik -->
-		<div id="pivotWrap" class="mt-4">
-			<h5 class="mb-2">Berdasarkan Lokasi</h5>
-			<div class="table-responsive">
 				<table class="table table-sm table-bordered">
 					<thead id="pivotHead"></thead>
 					<tbody id="pivotBody"></tbody>
@@ -1382,121 +1384,6 @@
 			document.addEventListener("DOMContentLoaded", initDonut);
 		} else {
 			initDonut();
-		}
-	})();
-
-	// Donut untuk shipping_type dengan fallback PKK.DN/LN
-	(function () {
-		const CSV_PATH = "trafik.csv";
-
-		function parseCSVText(csvText) {
-			const rows = [];
-			const lines = csvText.split(/\r?\n/).filter(l => l.trim().length);
-			if (!lines.length) return { headers: [], rows: [] };
-			const headers = splitCSVLine(lines[0]);
-			for (let i = 1; i < lines.length; i++) {
-				const vals = splitCSVLine(lines[i]);
-				const obj = {};
-				headers.forEach((h, idx) => { obj[h] = (vals[idx] || "").replace(/^"|"$/g, ""); });
-				rows.push(obj);
-			}
-			return { headers, rows };
-		}
-		function splitCSVLine(line) {
-			const out = []; let cur = "", inQ = false;
-			for (let i = 0; i < line.length; i++) {
-				const ch = line[i];
-				if (ch === '"') inQ = !inQ;
-				else if (ch === ',' && !inQ) { out.push(cur.trim()); cur = ""; }
-				else cur += ch;
-			}
-			out.push(cur.trim());
-			return out;
-		}
-
-		function normalizeType(typeVal, pkkVal) {
-			const v = (typeVal || "").toString().toUpperCase();
-			if (v.includes("DALAM NEGERI") || v === "DN" || v.includes("DOMESTIC")) return "Dalam Negeri";
-			if (v.includes("LUAR NEGERI") || v === "LN" || v.includes("INTERNATIONAL")) return "Luar Negeri";
-			const p = (pkkVal || "").toString().toUpperCase();
-			if (p.includes("PKK.DN")) return "Dalam Negeri";
-			if (p.includes("PKK.LN")) return "Luar Negeri";
-			return "Lainnya";
-		}
-
-		async function initDonutShipping() {
-			try {
-				const resp = await fetch(CSV_PATH);
-				const text = await resp.text();
-				const { headers, rows } = parseCSVText(text);
-				const hShip = headers.find(h => h.toLowerCase() === "shipping_type");
-				const hPkk = headers.find(h => h.toLowerCase() === "no_pkk_inaportnet");
-
-				const counts = new Map();
-				rows.forEach(r => {
-					const t = normalizeType(hShip ? r[hShip] : "", hPkk ? r[hPkk] : "");
-					if (!t) return;
-					counts.set(t, (counts.get(t) || 0) + 1);
-				});
-
-				// Urutkan dan siapkan dataset
-				const entries = Array.from(counts.entries()).sort((a,b) => b[1]-a[1]);
-				const labels = entries.map(([k]) => k);
-				const values = entries.map(([,v]) => v);
-				const total = values.reduce((a,b)=>a+b,0);
-
-				// Map to card palette
-				const colors = {
-					"Dalam Negeri": CARD_COLORS.green,
-					"Luar Negeri": CARD_COLORS.blue,
-					"Lainnya": CARD_COLORS.orange
-				};
-				const bg = labels.map(l => colors[l] || CARD_COLORS.purple);
-
-				const ctx = document.getElementById("donutShippingType")?.getContext("2d");
-				if (!ctx) return;
-
-				Chart.register(ChartDataLabels);
-				new Chart(ctx, {
-					type: "doughnut",
-					data: { labels, datasets: [{ data: values, backgroundColor: bg, borderColor: "#fff", borderWidth: 2, hoverOffset: 6 }] },
-					options: {
-						responsive: true,
-						maintainAspectRatio: false,
-						cutout: "60%",
-						plugins: {
-							legend: { position: "bottom" },
-							tooltip: {
-								callbacks: {
-									label: (ttx) => {
-										const v = ttx.parsed;
-										const pct = total ? (v/total*100) : 0;
-										return `${ttx.label}: ${formatInt(v)} (${pct.toFixed(1)}%)`;
-									}
-								}
-							},
-							datalabels: {
-								color: "#111",
-								font: { weight: "bold" },
-								formatter: (v) => {
-									const pct = total ? (v/total*100) : 0;
-									return pct >= 4 ? `${pct.toFixed(0)}%` : "";
-								}
-							},
-							donutShadow: { blur: 22, width: 6, alpha: 0.5, spread: 2 }
-						},
-						plugins: [donutShadowPlugin]
-					}
-				});
-			} catch (e) {
-				console.error("Gagal memuat/parse trafik.csv (shipping_type):", e);
-			}
-		}
-
-		if (document.readyState === "loading") {
-			document.addEventListener("DOMContentLoaded", initDonutShipping);
-		} else {
-			initDonutShipping();
 		}
 	})();
 
