--- a/trafiksby.html
+++ b/trafiksby.html
@@ -8,7 +8,45 @@
 	<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/neo-buttons.css">
 	<style>
-		body { background:#f6fafc; }
+		/* Futuristic soft blue background (match index.html) */
+		html, body { height: 100%; }
+		body {
+			background-color: #eaf6ff;
+			background-image:
+				/* soft glows */
+				radial-gradient(1000px 800px at 20% 10%, rgba(173,216,230,.35) 0%, rgba(173,216,230,0) 60%),
+				radial-gradient(800px 600px at 80% 20%, rgba(125,249,255,.22) 0%, rgba(125,249,255,0) 55%),
+				radial-gradient(900px 700px at 30% 80%, rgba(84,255,228,.16) 0%, rgba(84,255,228,0) 55%),
+				/* base gradient */
+				linear-gradient(180deg, #f4fbff 0%, #e7f6ff 50%, #ecfaff 100%);
+			background-attachment: fixed, fixed, fixed, fixed;
+			background-size: auto, auto, auto, 100% 100%;
+			background-repeat: no-repeat;
+		}
+
+		/* Subtle animated sheen overlay */
+		body::after {
+			content: "";
+			position: fixed;
+			inset: 0;
+			pointer-events: none;
+			background: linear-gradient(120deg,
+				rgba(145,194,255,.18),
+				rgba(125,249,255,.12),
+				rgba(173,216,230,.18)
+			);
+			background-size: 300% 300%;
+			animation: gradientShift 18s ease-in-out infinite;
+			mix-blend-mode: screen;
+		}
+		@keyframes gradientShift {
+			0%   { background-position: 0% 50%; }
+			50%  { background-position: 100% 50%; }
+			100% { background-position: 0% 50%; }
+		}
+		@media (prefers-reduced-motion: reduce) {
+			body::after { animation: none; }
+		}
 		.card { box-shadow:0 6px 12px rgba(0,0,0,.08); }
 		.card .card-title { font-size:.9rem; text-align:center; }
 		.card .card-text { font-size:2rem; font-weight:700; text-align:center; }
